add get all to all routes
